# service-fingerprinting-passive-analysis

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tailwind.config.cjs  tsconfig.ui.json
data/: aruba_demo_snapshot.json  cpe_rules.json  demo_vulnerabilities.json  flow_demo_snapshot.json  greenbone_demo_report.json  librenms_demo_snapshot.json  meraki_demo_snapshot.json  napalm_demo_snapshot.json  netmiko_demo_snapshot.json  ntopng_demo_snapshot.json  omada_demo_snapshot.json  scrapli_demo_snapshot.json  snmp_demo_snapshot.json  unifi_demo_snapshot.json  wazuh_demo_report.json
docs/: ANALYZA_PIPELINE_A_AUTOPILOT.md  BEZPECNE_ROZSIRENI_SBERU.md  CONNECTORS_A_LANES.md  CORE_EVALUATION_REPORT.md  DIGITAL_APPENDIX.md  ENTERPRISE_BACKENDS.md  ENTERPRISE_LIVE_PROOF.md  GAP_ANALYZA_LATEX_VS_PROGRAM.md  LATEX_MAPOVANI_A_E2E.md  LLM_POSOUZENI.md  LOKALNI_OVERENI.md  PIPELINE_ANALYZA_A_ZDROJE.md  PLATFORMA_CLUSTER.md  PRODUKCNI_DOTAZENI.md  RELEASE_VERIFICATION_2026-04-23.md  ROADMAP_PROFI_POUZITELNOSTI.md  SPECIFIKACE_A_TODO.md  THESIS_ALIGNMENT.md
scripts/: build-ui.mjs  enterprise-live-proof.ps1  priprav_pd_tools.ps1  setup-skoky-ai.ps1  thesis-live.ps1  ui-helpdesk-check.mjs  ui-overlap-check.mjs  ui-regression-check.mjs  ui-smoke.mjs  ui-visual-check.mjs  web_lab.py
src/: ai.rs  assistant.rs  automation.rs  broker.rs  config.rs  context.rs  correlation.rs  cpe.rs  decision.rs  diff.rs  error.rs  evaluation.rs  external_sql.rs  findings.rs  intel.rs  lanes.rs  lib.rs  main.rs  model.rs  narrative.rs  nmap.rs  paths.rs  vuln.rs  (+11 more)
(+52 files in other folders)
