[package]
name = "bakula-program"
version = "0.1.0"
edition = "2024"
description = "Prototyp pro fingerprinting sluzeb a pasivni analyzu sitoveho provozu."

[lib]
name = "bakula_program"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["http1", "json"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
ipnet = { version = "2.11", features = ["serde"] }
quick-xml = "0.38"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
roxmltree = "0.21"
rand = "0.9"
redis = "0.27"
rusqlite = { version = "0.33", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.145"
sha2 = "0.10"
postgres = { version = "0.19", features = ["with-chrono-0_4"] }
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
toml = "0.9"
tower-http = { version = "0.6", features = ["fs", "trace"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.23"
